# muict_thai_legal_RAG_GraphRAG

./: .gitignore  EVALUATION_PLAN.md  README.md  clone_dataset.py  embedding_rag.py  eval_metrics.py  eval_runner.py  graphrag_query_cli.py  hybridrag_query_cli.py  main.py  pyproject.toml  rag_querying.py  setup_project_dir.py  split_data.py  streamlit_app_hybridrag.py  test_link_ref_law.py
data/: .gitignore  source_dataset.txt
data/evaluation/: Experiment.xlsx  eval_graph_results.csv  eval_graph_summary.csv  eval_hybrid_results.csv  eval_hybrid_summary.csv  results_graph.jsonl  results_hybrid.jsonl  results_hybrid_rag.jsonl  results_hybrid_ref_topn_parent.jsonl  results_retrieval_topn.jsonl  results_sparse_rag.jsonl  results_vector_rag.jsonl
data/evaluation/jsonl/: expansion_top1_topk1.jsonl  expansion_top1_topk2.jsonl  expansion_top1_topk3.jsonl  expansion_topn_topk1.jsonl  expansion_topn_topk2.jsonl  expansion_topn_topk3.jsonl  graph_topk1.jsonl  graph_topk1_has_ref.jsonl  graph_topk1_no_ref.jsonl  graph_topk2.jsonl  graph_topk2_has_ref.jsonl  graph_topk2_no_ref.jsonl  graph_topk3.jsonl  graph_topk3_has_ref.jsonl  graph_topk3_no_ref.jsonl  hybrid_rag_topk1.jsonl  hybrid_rag_topk1_has_ref.jsonl  hybrid_rag_topk1_no_ref.jsonl  hybrid_rag_topk2.jsonl  hybrid_rag_topk2_has_ref.jsonl  hybrid_rag_topk2_no_ref.jsonl  hybrid_rag_topk3.jsonl  hybrid_rag_topk3_has_ref.jsonl  hybrid_rag_topk3_no_ref.jsonl  hybrid_ref_topn_append_topk2.jsonl  hybrid_ref_topn_append_topk3.jsonl  hybrid_ref_topn_parent_topk1.jsonl  hybrid_ref_topn_parent_topk1_has_ref.jsonl  hybrid_ref_topn_parent_topk1_no_ref.jsonl  hybrid_ref_topn_parent_topk2.jsonl  hybrid_ref_topn_parent_topk2_has_ref.jsonl  hybrid_ref_topn_parent_topk2_no_ref.jsonl  hybrid_ref_topn_parent_topk3.jsonl  hybrid_ref_topn_parent_topk3_no_ref.jsonl  (+20 more)
data/processed/: nitibench_cleaned_2026-03-17.parquet
data/tests/: test_dataset_2026-04-01.parquet  test_dataset_2026-04-01_filter.parquet
docker/: .gitignore  docker_compose_graph_rag.yaml  docker_compose_hybrid_rag.yaml
notebooks/: data_prep_nititbench.ipynb  f2_case_study.ipynb  hybrid_rag_querying.ipynb  hybrid_rag_querying_incomplete.ipynb  hybrid_rag_ref_law_link.ipynb  hyrbird_search.ipynb  indexing_graphrag.ipynb  indexing_rag.ipynb  llm_graph_builder.ipynb  llm_graph_with_chunkEmbedding.ipynb  qa_data_versioning.ipynb  tests_dataset.ipynb  tutorial_hyrbird_search.ipynb  tutotrial_call_module.ipynb
plan/: EVALUATION_PLAN.md  Manuscript Plan.md  Revised_Manuscript_Plan 13 April 2026.md  Revised_Manuscript_Plan 16 April 2026.md
src/common/: hello_world.py  pretty_debug_graphrag.py  pretty_debug_hybridrag.py
src/graph_rag/: config.py  graph_builder.py  graphrag_retriever.py
src/rag/: config.py  hybrid_retriever.py  hybridrag_langhchain.py
(+131 files in other folders)
