[project]
name = "muict-thai-legal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
]

[tool.uv.workspace]
members = [
    ".",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"] # บังคับให้มองโฟลเดอร์ src เป็น package หลัก

[tool.uv.sources]
muict-thai-legal-rag = { workspace = true }

[dependency-groups]
dev = [
    "muict-thai-legal-rag",
]
