[project]
name = "muict-thai-legal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-experimental>=0.4.1",
    "langchain-neo4j>=0.7.0",
    "langchain-openai>=1.1.11",
    "neo4j>=6.1.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    ".",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"] # บังคับให้มองโฟลเดอร์ src เป็น package หลัก

[tool.uv.sources]
muict-thai-legal-rag = { workspace = true }

[dependency-groups]
dev = [
    "muict-thai-legal-rag",
]
