[project]
name = "muict-thai-legal-rag"
version = "0.1.0"
description = "Senior Project: Thai Legal RAG with GraphRAG and Hybrid Search"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flagembedding>=1.3.5",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-experimental>=0.4.1",
    "langchain-neo4j>=0.7.0",
    "langchain-openai>=1.1.11",
    "neo4j>=6.1.0",
    "neo4j-graphrag>=1.13.1",
    "ollama>=0.6.1",
    "pandas>=2.2.0",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "torch>=2.4.0",
    "torchvision>=0.19.0,<0.26.0",
    "transformers>=4.44.2,<4.49.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# แก้ไขตรงนี้: ให้มองโฟลเดอร์ src เป็น package หลัก
packages = ["src"]

[tool.uv]
# สำหรับเครื่องมือที่ใช้ตอนพัฒนาเท่านั้น (ไม่ต้องใส่ชื่อโปรเจกต์ตัวเองที่นี่)
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
